# Garbage-Collector

./: CMakeLists.txt  README.md
include/: gc.h  gc_impl.h
lib/: gc.cpp  gc_impl.cpp  user_funcs_impl.cpp
tests/: benchmarks.cpp  compare.cpp  realApplicationBench.cpp  realtimeBench.cpp  test.cpp
